--- a/day00/ex02/form.html
+++ b/day00/ex02/form.html
@@ -25,11 +25,11 @@
 <input type="checkbox" name="student" id="student">
 <br>
 <label for="male">Male</label>
-<input type="radio" name="gender_male" id="gender_male">
+<input type="radio" name="gender_male" id="gender_male" value="Male">
 <label for="ffemale">Female</label>
-<input type="radio" name="gender_female" id="gender_female">
+<input type="radio" name="gender_female" id="gender_female" value="Female">
 <label for="other">Other</label>
-<input type="radio" name="gender_other" id="gender_other">
+<input type="radio" name="gender_other" id="gender_other" value="Other">
 <br>
 <button type="submit" onclick="displayFormContents()">Run thet sexy Javascript !</button>
 <script type="text/javascript" src="popup.js"></script>
