correct_day00_day01

--- a/day00/ex01/cv.html
+++ b/day00/ex01/cv.html
@@ -1,62 +1,70 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Резюме</title>
- <style type="text/css">
- table {
-     border-collapse: collapse; 
-     border-style: solid;
+
+<head>
+  <title>Резюме</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      border-style: solid;
     }
+    
     th {
-     background: #ccc;
-     text-align: left;
+      background: #ccc;
+      text-align: left;
     }
-    td, th {
-     border: 1px solid #800;
-     padding: 4px; 
+    
+    td,
+    th {
+      border: 1px solid #800;
+      padding: 4px;
     }
   </style>
 
-	</head>
-	<body>
-		<h1>Резюме</h1>
-		Имя: Татьяна<br>
-		Фамилия: Коновалова<br>
+</head>
 
-<br>
-Навыки:
-<ul>
-Языки программирования:
-<li> С </li>
-<li> С++ </li>
-<li> Python </li>
-<li> Java </li>
-</ul>
-<ol>
-Soft skills:
-<li> Каммуникабельность </li>
-<li> Креативность </li>
-<li> Работа в команде </li>
-<li> Организаторские навыки </li>
-<ol>
-<br>
-Карьерный путь:<br>
-<table width="100%" cellspacing="0" border="1">
-<tr>
-<th> Место работы </th>
-<th> Года работы </th>
-<th> Должность </th>
-</tr>
-<tr>
-<td> ГБОУ ШКОЛА №1158 Г.МОСКВА </td>
-<td> 09.2014 - НАСТ. ВРЕМЯ </td>
-<td> Учитель информатики </td>
-</tr>
-<tr>
-<td> МБОУ "ЛИЦЕЙ №32" Г.КОСТРОМА </td>
-<td>  02.2008 - 09.2014 </td>
-<td style="border:2px solid #424242">  Учитель информатики </td>
-</tr>
-</table>
-	</body>
+<body>
+  <h1>Резюме</h1> Имя: Татьяна
+  <br> Фамилия: Коновалова
+  <br>
+
+  <br> Навыки:
+  <br>
+  <br> Языки программирования:
+  <ul>
+
+    <li> С </li>
+    <li> С++ </li>
+    <li> Python </li>
+    <li> Java </li>
+  </ul>
+
+  Soft skills:
+  <ol>
+    <li> Каммуникабельность </li>
+    <li> Креативность </li>
+    <li> Работа в команде </li>
+    <li> Организаторские навыки </li>
+  </ol>
+  <br> Карьерный путь:
+  <br>
+  <table>
+    <tr>
+      <th> Место работы </th>
+      <th> Года работы </th>
+      <th> Должность </th>
+    </tr>
+    <tr>
+      <td> ГБОУ ШКОЛА №1158 Г.МОСКВА </td>
+      <td> 09.2014 - НАСТ. ВРЕМЯ </td>
+      <td> Учитель информатики </td>
+    </tr>
+    <tr>
+      <td> МБОУ "ЛИЦЕЙ №32" Г.КОСТРОМА </td>
+      <td> 02.2008 - 09.2014 </td>
+      <td style="border:2px solid #424242"> Учитель информатики </td>
+    </tr>
+  </table>
+</body>
+
 </html>
-
