--- a/day00/ex02/form.html
+++ b/day00/ex02/form.html
@@ -1,38 +1,43 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<title>
-</title>
-<meta charset="utf-8">
+  <title>
+      Form
+  </title>
+  <meta charset="utf-8">
 </head>
+
 <body>
-<form>
-<label for="firstname">Firstname :</label>
-<input type="text" name="firstname" id="firstname">
-<br>
-<label for="name">Name :</label>
-<input type="text" name="name" id="name">
-<br>
-<label for="age">Age :</label>
-<input type="data" name="age" id="age">
-<br>
-<label for="phone">Phone :</label>
-<input type="tel" name="phone" id="phone">
-<br>
-<label for="email">Email :</label>
-<input type="email" name="email" id="email">
-<br>
-<label for="student">Student at 42 ?:</label>
-<input type="checkbox" name="student" id="student">
-<br>
-<label for="male">Male</label>
-<input type="radio" name="gender_male" id="gender_male" value="Male">
-<label for="ffemale">Female</label>
-<input type="radio" name="gender_female" id="gender_female" value="Female">
-<label for="other">Other</label>
-<input type="radio" name="gender_other" id="gender_other" value="Other">
-<br>
-<button type="submit" onclick="displayFormContents()">Run thet sexy Javascript !</button>
-<script type="text/javascript" src="popup.js"></script>
-</form>
+  <form>
+    <label for="firstname">Firstname :</label>
+    <input type="text" name="firstname" id="firstname">
+    <br>
+    <label for="name">Name :</label>
+    <input type="text" name="name" id="name">
+    <br>
+    <label for="age">Age :</label>
+    <input type="data" name="age" id="age">
+    <br>
+    <label for="phone">Phone :</label>
+    <input type="tel" name="phone" id="phone">
+    <br>
+    <label for="email">Email :</label>
+    <input type="email" name="email" id="email">
+    <br>
+    <label for="student">Student at 42 ?:</label>
+    <input type="checkbox" name="student" id="student">
+    <br>
+    <label for="gender_male">Male</label>
+    <input type="radio" name="gender_male" id="gender_male" value="Male">
+    <label for="gender_female">Female</label>
+    <input type="radio" name="gender_female" id="gender_female" value="Female">
+    <label for="gender_other">Other</label>
+    <input type="radio" name="gender_other" id="gender_other" value="Other">
+    <br>
+    <button type="submit" onclick="displayFormContents()">Run thet sexy Javascript !</button>
+    <script src="popup.js"></script>
+  </form>
 </body>
+
 </html>
